--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="centered-main-page-element">
       <!-- <p id="paragraph-add-item">  id is never used -->
       <p> 
-        <label for="new-task">Add Item</label>
+        <label for="new-task-id">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task-input" type="text">
+          <input id="new-task-id"class="task-input" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incomplete-tasks-id">
         <li>
           <input type="checkbox"><label class="task-input">Pay Bills</label>
           <input type="text" class="task-input">
@@ -35,7 +35,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed-tasks-id">
         <li>
           <input type="checkbox" checked><label class="task-input">See the Doctor</label>
           <input type="text" class="task-input"><button class="edit-button">Edit</button>
