--- a/index.html
+++ b/index.html
@@ -6,43 +6,46 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header-container">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <div class="container">
+      <div class="header-container">
+        <img src="./eisenhower-matrix.jpg">
+        <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      </div>
+      <div class="centered-main-page-element">
+        <!-- <p id="paragraph-add-item">  id is never used -->
+        <p> 
+          <label for="new-task-id" class = "lable-add-item">Add Item</label>
+          <div class="task-row-wrapper">
+            <input id="new-task-id"class="input-text task-input" type="text">
+            <button class = "button">Add</button>
+          </div>
+        </p>
+        <h3>todo</h3>
+        <ul id="incomplete-tasks-id" class ="task-list">
+          <li>
+            <input type="checkbox"><label class="task-input">Pay Bills</label>
+            <input type="text" class="input-text task-input">
+            <button class="button edit-button">Edit</button>
+            <button class="button delete-button"><img src="./remove.svg"></button>
+          </li>
+          <li class="edit-mode">
+            <input type="checkbox"><label class="task-input">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input-text task-input">
+            <button class="button edit-button">Save</button>
+            <button class="button delete-button"><img src="./remove.svg"></button>
+          </li>
+        </ul>
+        <h3>completed</h3>
+        <ul id="completed-tasks-id" class ="task-list">
+          <li>
+            <input type="checkbox" checked><label class="task-input">See the Doctor</label>
+            <input type="text" class="input-text task-input">
+            <button class="button edit-button">Edit</button>
+            <button class="button delete-button"><img src="./remove.svg"></button>
+          </li>
+        </ul>
+      </div>
+      <script src="app.js"></script>
     </div>
-    <div class="centered-main-page-element">
-      <!-- <p id="paragraph-add-item">  id is never used -->
-      <p> 
-        <label for="new-task-id">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task-id"class="task-input" type="text">
-          <button>Add</button>
-        </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks-id">
-        <li>
-          <input type="checkbox"><label class="task-input">Pay Bills</label>
-          <input type="text" class="task-input">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button"><img src="./remove.svg"></button>
-        </li>
-        <li class="edit-mode">
-          <input type="checkbox"><label class="task-input">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task-input">
-          <button class="edit-button">Save</button>
-          <button class="delete-button"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks-id">
-        <li>
-          <input type="checkbox" checked><label class="task-input">See the Doctor</label>
-          <input type="text" class="task-input"><button class="edit-button">Edit</button>
-          <button class="delete-button"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-    </div>
-    <script src="app.js"></script>
   </body>
 </html>
