--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </p>
         <h3>todo</h3>
         <ul id="incomplete-tasks-id" class ="task-list">
-          <li>
+          <li class = "list-item">
             <input type="checkbox"><label class="task-input">Pay Bills</label>
             <input type="text" class="input-text task-input">
             <button class="button edit-button">Edit</button>
             <button class="button delete-button"><img src="./remove.svg"></button>
           </li>
-          <li class="edit-mode">
+          <li class="list-item edit-mode">
             <input type="checkbox"><label class="task-input">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input-text task-input">
             <button class="button edit-button">Save</button>
@@ -37,7 +37,7 @@
         </ul>
         <h3>completed</h3>
         <ul id="completed-tasks-id" class ="task-list">
-          <li>
+          <li class = "list-item">
             <input type="checkbox" checked><label class="task-input">See the Doctor</label>
             <input type="text" class="input-text task-input">
             <button class="button edit-button">Edit</button>
