refactor: update html / css / js in accorance to rule 3.5. Indentation in blocks in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <h3>todo</h3>
         <ul id="incomplete-tasks-id" class ="task-list">
           <li class = "list-item">
-            <input type="checkbox"><label class="task-input">Pay Bills</label>
+            <input type="checkbox" class = "check-box"><label class="checkbox-lable task-input">Pay Bills</label>
             <input type="text" class="input-text task-input">
             <button class="button edit-button">Edit</button>
             <button class="button delete-button"><img src="./remove.svg"></button>
           </li>
           <li class="list-item edit-mode">
-            <input type="checkbox"><label class="task-input">Go Shopping</label>
+            <input type="checkbox"><label class="checkbox-lable task-input">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input-text task-input">
             <button class="button edit-button">Save</button>
             <button class="button delete-button"><img src="./remove.svg"></button>
@@ -38,7 +38,7 @@
         <h3>completed</h3>
         <ul id="completed-tasks-id" class ="task-list">
           <li class = "list-item">
-            <input type="checkbox" checked><label class="task-input">See the Doctor</label>
+            <input type="checkbox" checked><label class="checkbox-lable task-input">See the Doctor</label>
             <input type="text" class="input-text task-input">
             <button class="button edit-button">Edit</button>
             <button class="button delete-button"><img src="./remove.svg"></button>
