--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="header-container">
-        <img src="./eisenhower-matrix.jpg">
+        <img src="./eisenhower-matrix.jpg" alt = "Eisenhower Matrix">
         <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
       <div class="centered-main-page-element">
@@ -26,13 +26,13 @@
             <input type="checkbox" class = "check-box"><label class="checkbox-lable task-input">Pay Bills</label>
             <input type="text" class="input-text task-input">
             <button class="button edit-button">Edit</button>
-            <button class="button delete-button"><img src="./remove.svg"></button>
+            <button class="button delete-button"><img src="./remove.svg" alt="Remove button"></button>
           </li>
           <li class="list-item edit-mode">
             <input type="checkbox"><label class="checkbox-lable task-input">Go Shopping</label>
             <input type="text" value="Go Shopping" class="input-text task-input">
             <button class="button edit-button">Save</button>
-            <button class="button delete-button"><img src="./remove.svg"></button>
+            <button class="button delete-button"><img src="./remove.svg" alt="Remove button"></button>
           </li>
         </ul>
         <h3>completed</h3>
@@ -41,7 +41,7 @@
             <input type="checkbox" checked><label class="checkbox-lable task-input">See the Doctor</label>
             <input type="text" class="input-text task-input">
             <button class="button edit-button">Edit</button>
-            <button class="button delete-button"><img src="./remove.svg"></button>
+            <button class="button delete-button"><img src="./remove.svg" alt="Remove button"></button>
           </li>
         </ul>
       </div>
