--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
         <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
       <div class="centered-main-page-element">
-        <!-- <p id="paragraph-add-item">  id is never used -->
-        <p>
+        <section class="section-add-item">
           <label for="new-task-id" class = "lable-add-item">Add Item</label>
           <div class="task-row-wrapper">
             <input id="new-task-id" class="input-text task-input" type="text">
             <button class = "button">Add</button>
           </div>
-        </p>
+        </section>
         <h3>todo</h3>
         <ul id="incomplete-tasks-id" class ="task-list">
           <li class = "list-item">
